--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,41 @@
 <!-- This is the footer include file. -->
+<div id="footer-wrapper">
+    <footer id="footer" class="container">
+        <div class="row">
+            <div class="col-3 col-6-medium col-12-small">
+                <!-- Contact -->
+                <section class="widget contact last">
+                    <ul>
+                        <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
+                        </li>
+                        <li><a href="#" class="icon brands fa-facebook-f"><span
+                                    class="label">Facebook</span></a></li>
+                        <li><a href="#" class="icon brands fa-instagram"><span
+                                    class="label">Instagram</span></a></li>
+                        <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a>
+                        </li>
+                        <li><a href="#" class="icon brands fa-pinterest"><span
+                                    class="label">Pinterest</span></a></li>
+                    </ul>
+                </section>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div id="copyright">
+                    <ul class="menu">
+                        <li>&copy; {{site.owner}}. All rights reserved</li>
+                        <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+</div>
+<!-- Scripts -->
+<script src="{{site.baseurl}}/assets/js/jquery.min.js"></script>
+<script src="{{site.baseurl}}/assets/js/jquery.dropotron.min.js"></script>
+<script src="{{site.baseurl}}/assets/js/browser.min.js"></script>
+<script src="{{site.baseurl}}/assets/js/breakpoints.min.js"></script>
+<script src="{{site.baseurl}}/assets/js/util.js"></script>
+<script src="{{site.baseurl}}/assets/js/main.js"></script>
