--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,18 @@
 <!-- This is the header include file. -->
+<div id="header-wrapper">
+    <header id="header" class="container">
+        <!-- Logo -->
+        <div id="logo">
+            <h1><a href="{{site.baseurl}}/">{{site.name}}</a></h1>
+        </div>
+        <!-- Nav -->
+        <nav id="nav">
+            <ul>
+                <li><a href="{{site.baseurl}}/">Home</a></li>
+                <li><a href="{{site.baseurl}}/blog/">Blog</a></li>
+                <li><a href="{{site.baseurl}}/projects/">Projects</a></li>
+                <li><a href="{{site.baseurl}}/about/">About Me</a></li>
+            </ul>
+        </nav>
+    </header>
+</div>
